fix layout on mobile devices, fix redirect/router problem

--- a/src/assets/css/order.css
+++ b/src/assets/css/order.css
@@ -147,14 +147,16 @@
 }
 
 @media(max-width:480px) {
-  .order {
-    display: none;
-  }
+  
   .order {
     width: 100%;
-    display: flex !important;
+    display: flex;
     justify-content: center;
     flex-direction: column;
+  }
+
+  .order {
+    display: none;
   }
 
   .order .row:nth-child(1) {
